Fixed profile picture stretching, even dogs should look decent now

--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -840,7 +840,6 @@ input[type=email], input[type=password], input[type=text] {
 .profile-picture {
     width: auto;
     min-height: 175px;
-    min-width: 175px;
     max-width: 250px;
     max-height: 210px;
     margin-right: 50px;
